tests/ui/cfg/cfg-target-compact-errors.stderr
error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-target-compact-errors.rs:5:14
   |
LL | #[cfg(target(o::o))]
   |              ^^^^

error[E0565]: literal in `cfg` predicate value must be a string
  --> $DIR/cfg-target-compact-errors.rs:9:19
   |
LL | #[cfg(target(os = 8))]
   |                   ^

error[E0537]: invalid predicate `target_pointer`
  --> $DIR/cfg-target-compact-errors.rs:13:28
   |
LL | #[cfg(target(os = "linux", pointer(width = "64")))]
   |                            ^^^^^^^^^^^^^^^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-target-compact-errors.rs:17:14
   |
LL | #[cfg(target(true))]
   |              ^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0537, E0565.
For more information about an error, try `rustc --explain E0537`.
